# swash_demo

./: Cargo.toml  README.md  manifest.scm
examples/: list-fonts.rs
src/: builder.rs  context.rs  family.rs  index.rs  lib.rs  main.rs  types.rs
src/bin_/: wrmain.rs
src/comp/: mod.rs  text.rs
src/comp/image_cache/: glyph.rs  mod.rs
src/doc/: mod.rs
src/layout/: builder.rs  builder_data.rs  layout.rs  layout_data.rs  mod.rs  span_style.rs
src/layout/font/: builder.rs
src/util/: fxhash.rs
