[package]
name = "swash_demo"
version = "0.1.0"
authors = ["chad <cbrokaw@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swash = "0.1.8"
memmap2 = "0.7.1"
clipboard2 = "0.1.1"
glutin = "0.30.3"
glutin-winit = "0.3.0"
winit = "0.28.6"
raw-window-handle = "0.5.0"

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
fontconfig-parser = "0.5"

[build-dependencies]
gl_generator = "0.14.0"
