[package]
name = "font-index"
version = "0.1.0"
authors = ["chad <cbrokaw@gmail.com>"]
edition = "2018"
description = "Static index for system fonts"

[dependencies]
swash = "0.1"
memmap2 = "0.2.1"

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
fontconfig-parser = "0.5"
